# version3-modern-master

./: .env  .env.example  .gitignore  README.md  pyproject.toml
multimodal_rag/: __init__.py  config.py  document_processor.py  main.py  qa_chain.py  retriever.py  summarizer.py
